Issue #6317: Now winsound.PlaySound can accept non ascii filename.